@@ -1,6 +1,9 @@
 package lt.tastybytes.receptaiserver.service.impl;
 
+import jakarta.validation.Valid;
+import lt.tastybytes.receptaiserver.dto.user.PatchUserDto;
 import lt.tastybytes.receptaiserver.exception.NotFoundException;
+import lt.tastybytes.receptaiserver.exception.UserAlreadyExistsException;
 import lt.tastybytes.receptaiserver.model.user.Role;
 import lt.tastybytes.receptaiserver.model.user.User;
 import lt.tastybytes.receptaiserver.repository.RoleRepository;
@@ -14,7 +17,9 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
+import java.util.InvalidPropertiesFormatException;
 import java.util.List;
+import java.util.Optional;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -39,6 +44,11 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    public Optional<User> findUserById(long id) {
+        return userRepository.findById(id);
+    }
+
+    @Override
     public void createUser(String name, String email, String password) {
         var user = new User();
         user.setName(name);
@@ -52,8 +62,42 @@ public class UserServiceImpl implements UserService {
         if (role == null) {
             role = createDefaultRoleIfNotExist();
         }
-        user.setRoles(Arrays.asList(role));
+        user.setRoles(List.of(role));
         userRepository.save(user);
+    }
+
+    @Override
+    public User editUser(User user, @Valid PatchUserDto dto) throws UserAlreadyExistsException {
+
+        // Require valid password reauth if changing password or email
+        if (dto.newEmail() != null || dto.newPassword() != null) {
+            authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(user.getEmail(), dto.oldPassword()));
+        }
+
+        if (dto.newEmail() != null) {
+
+            var userWithEmail = findUserByEmail(dto.newEmail());
+            if (userWithEmail != null)
+                throw new UserAlreadyExistsException();
+            user.setEmail(dto.newEmail());
+        }
+
+        if (dto.newName() != null) {
+            user.setName(dto.newName());
+        }
+
+        if (dto.newPassword() != null) {
+            var passwordEncoder = new BCryptPasswordEncoder();
+            user.setPassword(passwordEncoder.encode(dto.newPassword()));
+            // TODO: might prompt token refresh in the future
+        }
+
+        if (dto.newProfileAvatarUrl() != null) {
+            user.setProfileUrl(dto.newProfileAvatarUrl());
+        }
+
+        userRepository.save(user);
+        return user;
     }
 
     public User authenticate(String email, String password) {
